# spectre

./: CMakeLists.txt
cmake/: SetupCxxFlags.cmake  SetupDoxygen.cmake
docs/: Doxyfile.in
docs/DevGuide/: Amr.md  Connectivity.md
docs/Installation/: BuildSystem.md
docs/config/: DoxygenLayout_1_8_10.xml  DoxygenLayout_1_9_8.xml  doxygen-awesome-fragment-copy-button.js  doxygen-awesome.css  header.html
src/ControlSystem/Measurements/: BNSCenterOfMass.hpp  CMakeLists.txt  Measurements.hpp
src/DataStructures/: FloatingPointType.hpp
src/DataStructures/Blaze/: Blaze.hpp  CMakeLists.txt
src/DataStructures/Tensor/: Structure.hpp
src/Domain/: Block.cpp
src/Domain/CoordinateMaps/: CoordinateMap.hpp  CoordinateMap.tpp  Frustum.cpp  UniformCylindricalEndcap.hpp  UniformCylindricalFlatEndcap.hpp  UniformCylindricalSide.hpp
src/Domain/Creators/: BinaryCompactObject.hpp  Sphere.cpp
src/Elliptic/Actions/: RunEventsAndTriggers.hpp
src/Elliptic/Protocols/: FirstOrderSystem.hpp
src/Elliptic/Systems/: GetSourcesComputer.hpp
src/Evolution/Actions/: RunEventsAndTriggers.hpp
src/Evolution/DiscontinuousGalerkin/: InboxTags.hpp
src/Evolution/Initialization/: Evolution.hpp
src/ParallelAlgorithms/EventsAndTriggers/: CMakeLists.txt  Tags.hpp  Trigger.hpp  WhenToCheck.cpp  WhenToCheck.hpp
src/Utilities/: TaggedTuple.hpp
support/Machines/: CaltechHpc.yaml  Mbot.yaml  Ocean.yaml  Oscar.yaml  Perlmutter.yaml  Sonic.yaml
support/Pipelines/: CMakeLists.txt
support/Python/: Machines.py  __main__.py
tools/: CheckOutputFiles.py  FileTestDefs.sh
(+323 files in other folders)
